--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.2.0",
     "@types/node": "^18.11.17",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
     "postcss": "^8.4.35",
     "sass": "^1.62.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "typescript-eslint": "^7.8.0"
   }
 }
