--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "eslint app/"
+    "lint": "eslint app/ components/"
   },
   "repository": {
     "type": "git",
