--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
     "plugin:react/jsx-runtime",
     "plugin:jsx-a11y/recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:@next/next/recommended",
   ],
   "reportUnusedDisableDirectives": true,
   "settings": {
