--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@next/eslint-plugin-next": "^14.2.3",
     "@types/node": "^18.11.17",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.18",
