--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   },
   "homepage": "https://github.com/etrobert/etiennerobert.com#readme",
   "dependencies": {
-    "next": "^15.3.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^15.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
