--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^18.11.17",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.18",
@@ -34,7 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.6",
     "typescript": "^4.9.4",
     "typescript-eslint": "^7.8.0"
   }
