--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "next": "^15.3.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
     "@next/eslint-plugin-next": "^15.3.2",
     "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "^18.11.17",
     "@types/react": "^18.2.6",
     "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
+    "eslint": "^9.26.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.4.35",
