--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.4.35",
+    "prettier": "^3.5.3",
     "tailwindcss": "^4.1.6",
     "typescript": "^4.9.4",
     "typescript-eslint": "^8.32.0"
