add sass as a dependency

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/etrobert/etiennerobert.com#readme",
   "dependencies": {
-    "next": "^15.3.2"
+    "next": "^15.3.2",
+    "sass": "^1.93.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
